@@ -88,6 +88,7 @@ import com.microsoft.identity.common.internal.broker.PackageHelper;
 import com.microsoft.identity.common.internal.cache.SharedPreferencesFileManager;
 import com.microsoft.identity.common.internal.commands.GenerateShrCommand;
 import com.microsoft.identity.common.internal.commands.GetDeviceModeCommand;
+import com.microsoft.identity.common.internal.commands.IsQrPinAvailableCommand;
 import com.microsoft.identity.common.internal.controllers.LocalMSALController;
 import com.microsoft.identity.common.internal.migration.AdalMigrationAdapter;
 import com.microsoft.identity.common.internal.migration.TokenMigrationCallback;
@@ -105,6 +106,7 @@ import com.microsoft.identity.common.java.cache.MsalOAuth2TokenCache;
 import com.microsoft.identity.common.java.commands.CommandCallback;
 import com.microsoft.identity.common.java.commands.DeviceCodeFlowCommand;
 import com.microsoft.identity.common.java.commands.DeviceCodeFlowCommandCallback;
+import com.microsoft.identity.common.java.commands.ICommandResult;
 import com.microsoft.identity.common.java.commands.InteractiveTokenCommand;
 import com.microsoft.identity.common.java.commands.SilentTokenCommand;
 import com.microsoft.identity.common.java.commands.parameters.CommandParameters;
@@ -112,7 +114,9 @@ import com.microsoft.identity.common.java.commands.parameters.DeviceCodeFlowComm
 import com.microsoft.identity.common.java.commands.parameters.GenerateShrCommandParameters;
 import com.microsoft.identity.common.java.commands.parameters.InteractiveTokenCommandParameters;
 import com.microsoft.identity.common.java.commands.parameters.SilentTokenCommandParameters;
+import com.microsoft.identity.common.java.controllers.BaseController;
 import com.microsoft.identity.common.java.controllers.CommandDispatcher;
+import com.microsoft.identity.common.java.controllers.CommandResult;
 import com.microsoft.identity.common.java.controllers.ExceptionAdapter;
 import com.microsoft.identity.common.java.dto.AccountRecord;
 import com.microsoft.identity.common.java.eststelemetry.PublicApiId;
@@ -120,6 +124,7 @@ import com.microsoft.identity.common.java.exception.BaseException;
 import com.microsoft.identity.common.java.exception.ClientException;
 import com.microsoft.identity.common.java.exception.ErrorStrings;
 import com.microsoft.identity.common.java.exception.ServiceException;
+import com.microsoft.identity.common.java.exception.UserCancelException;
 import com.microsoft.identity.common.java.opentelemetry.AttributeName;
 import com.microsoft.identity.common.java.opentelemetry.OTelUtility;
 import com.microsoft.identity.common.java.opentelemetry.OtelContextExtension;
@@ -129,6 +134,7 @@ import com.microsoft.identity.common.java.providers.microsoft.MicrosoftAccount;
 import com.microsoft.identity.common.java.providers.microsoft.MicrosoftRefreshToken;
 import com.microsoft.identity.common.java.providers.microsoft.azureactivedirectory.AzureActiveDirectory;
 import com.microsoft.identity.common.java.providers.oauth2.OAuth2TokenCache;
+import com.microsoft.identity.common.java.result.FinalizableResultFuture;
 import com.microsoft.identity.common.java.result.GenerateShrResult;
 import com.microsoft.identity.common.java.result.ILocalAuthenticationResult;
 import com.microsoft.identity.common.java.result.LocalAuthenticationResult;
@@ -1461,6 +1467,68 @@ public class PublicClientApplication implements IPublicClientApplication, IToken
     @Override
     public boolean isSharedDevice() {
         return mPublicClientConfiguration.getIsSharedDevice();
+    }
+
+    /**
+     * Returns whether the application supports the QR code scanning + PIN protocol.
+     *
+     * @return true if the device supports the QR code scanning + PIN protocol, false otherwise.
+     */
+    @Override
+    public boolean isQRPinAvailable() throws BaseException {
+        final String methodTag = TAG + ":isQRPinAvailable";
+
+        final CommandParameters params = CommandParametersAdapter.createCommandParameters(
+                mPublicClientConfiguration,
+                mPublicClientConfiguration.getOAuth2TokenCache()
+        );
+
+        final BaseController controller = new MSALControllerFactory(mPublicClientConfiguration)
+                .getDefaultController(CommandParametersAdapter.getRequestAuthority(mPublicClientConfiguration));
+
+        final IsQrPinAvailableCommand command = new IsQrPinAvailableCommand(
+                params,
+                controller,
+                new CommandCallback<Boolean, BaseException>() {
+                    @Override
+                    public void onError(BaseException error) {
+                        Logger.error(methodTag, "Unexpected error on isQRPinAvailable", error);
+                    }
+                    @Override
+                    public void onTaskCompleted(Boolean isQrPinAvailable) {
+                        Logger.info(methodTag, "is QR + PIN available? " + isQrPinAvailable );
+                    }
+                    @Override
+                    public void onCancel() {
+                        // Should not be reached.
+                    }
+                },
+                PublicApiId.PCA_IS_QR_PIN_AVAILABLE
+        );
+
+        final ResultFuture<CommandResult> future = CommandDispatcher.submitSilentReturningFuture(command);
+
+        try {
+            final CommandResult commandResult = future.get();
+            switch (commandResult.getStatus()) {
+                case COMPLETED:
+                    Logger.info(methodTag, "is QR + PIN available? " + commandResult.getResult());
+                    return (Boolean) commandResult.getResult();
+                case ERROR:
+                    final BaseException exception = (BaseException) commandResult.getResult();
+                    Logger.error(methodTag, "Unexpected error on isQRPinAvailable", exception);
+                    throw exception;
+                case CANCEL:
+                    Logger.warn(methodTag, "isQRPinAvailable was cancelled");
+                    return false;
+                default:
+                    Logger.warn(methodTag, "Unexpected status on isQRPinAvailable: " + commandResult.getStatus());
+                    return false;
+            }
+        } catch (final InterruptedException | ExecutionException e) {
+            Logger.error(methodTag, "Unexpected error on isQRPinAvailable", e);
+            return false;
+        }
     }
 
     @Override
