@@ -1009,7 +1009,7 @@ public class CommandParametersAdapter {
         return null;
     }
 
-    private static Authority getRequestAuthority(
+    public static Authority getRequestAuthority(
             @NonNull final PublicClientApplicationConfiguration publicClientApplicationConfiguration) {
 
         String requestAuthority = null;
