@@ -61,6 +61,11 @@ public class SingleAccountModeWrapper extends MsalWrapper {
     }
 
     @Override
+    public IPublicClientApplication getApp() {
+        return mApp;
+    }
+
+    @Override
     public String getDefaultBrowser() {
         try {
             return BrowserSelector.select(mApp.getConfiguration().getAppContext(),
