@@ -695,5 +695,19 @@
                 android:text="@string/trust_debug_broker" />
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+            <Button
+                android:id="@+id/btnIsQrPinAvailable"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="5"
+                android:gravity="center"
+                android:text="@string/is_qr_pin_available" />
+        </LinearLayout>
+
     </LinearLayout>
 </ScrollView>
