@@ -55,6 +55,7 @@
     <string name="auth_scheme_text">Auth Scheme</string>
     <string name="launch_main_activity_button">Start Task</string>
     <string name="get_active_broker">Get active broker package</string>
+    <string name="is_qr_pin_available">is QR + PIN available</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
